# easytreevis

./: .gitignore  README.md  pyproject.toml
easytreevis/: __init__.py  core.py  layout.py  render.py  utils.py
examples/: mcts_example.py  tree_example.py  tree_example_2.py  tree_example_dict.py  tree_example_list.py
tests/: automatic_tests.py  manual_tests.py
