[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easytreevis"
version = "1.0.0"
description = "Package for easy visualisation of trees in Python"
authors = [
  { name="Michał Gomułczak", email="michal.gomulczak1@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
dependencies = ["svgwrite>=1.4.3"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["easytreevis"]
